[package]
authors = ["Godmode Galactus <gmgalactus@mango.markets>", "Maximilian Schneider <max@mango.markets>"]
edition = "2021"
name = "solana-bench-mango"
version = "1.10.26"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
borsh = "0.9.3"
chrono = "0.4.19"
clap = "2.33.1"
crossbeam-channel = "0.5"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
multiqueue = "^0.3.2"
log = "0.4.14"
rand = ">=0.8.5"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
mango = { git = "https://github.com/KirillLykov/mango-v3.git", branch = "mango_testnet" }
mango-common = { git = "https://github.com/KirillLykov/mango-v3.git", branch = "mango_testnet" }
solana-clap-utils = "1.14.13"
solana-cli-config = "1.14.13"
solana-client = "1.14.13"
solana-core = "1.14.13"
solana-faucet = "1.14.13"
solana-genesis = "1.14.13"
solana-gossip = "1.14.13"
solana-logger = "1.14.13"
solana-measure = "1.14.13"
solana-metrics = "1.14.13"
solana-net-utils = "1.14.13"
solana-rpc = "1.14.13"
solana-runtime = "1.14.13"
solana-sdk = "1.14.13"
solana-streamer = "1.14.13"
solana-transaction-status = "1.14.13"
solana-version = "1.14.13"
thiserror = "1.0"
solana-program = ">=1.9.0"
csv = "1.0.0"

[dev-dependencies]
serial_test = "0.6.0"
solana-local-cluster = "1.14.13" 
solana-test-validator = "1.14.13"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

exclude = [
    "deps/mango-v3",
]
