[package]
authors = ["Godmode Galactus <gmgalactus@mango.markets>", "Maximilian Schneider <max@mango.markets>"]
edition = "2021"
name = "solana-bench-mango"
version = "1.10.26"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

rust-version = "1.66.1"

[dependencies]
borsh = "0.9.3"
chrono = "0.4.19"
clap = "2.33.1"
crossbeam-channel = "0.5"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
multiqueue = "^0.3.2"
log = "0.4.14"
rand = ">=0.8.5"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
iter_tools = "0.1.4"

mango = { git = "https://github.com/blockworks-foundation/mango-v3.git", branch = "mango_bencher_compatible", default-features = false, features = ["no-entrypoint"] }
mango-common = { git = "https://github.com/blockworks-foundation/mango-v3.git", branch = "mango_bencher_compatible" }

solana-client = { version = "1.14.16" }
solana-core = { version = "1.14.16" }
solana-metrics = { version = "1.14.16" }
solana-rpc = { version = "1.14.16" }
solana-runtime = { version = "1.14.16" }
solana-sdk = { version = "1.14.16" }
solana-clap-utils = { version = "1.14.16" }
solana-cli-config = { version = "1.14.16" }
solana-net-utils = { version = "1.14.16" }
solana-version = { version = "1.14.16" }
solana-logger = { version = "1.14.16" }
solana-transaction-status = { version = "1.14.16" }
solana-quic-client = { version = "1.14.16" }

thiserror = "1.0"
solana-program = ">=1.9.0"
csv = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

exclude = [
    "deps/solana",
    "deps/mango-v3",
]
